# cmux-agent

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
.claude/: hookify.require-tests.local.md  settings.json
.claude/hooks/: scope-guard.sh
.claude/hooks/peon-ping/: config.json
.cmux/: agent.json
.cmux/prompts/: dispatch.md  orchestrator.md  result.md  worker.md
.codex/: config.toml
.github/workflows/: branch-name-check.yml  pr-title-check.yml
.husky/: validate-branch.cjs  validate-commit.cjs
.husky/docs/: branch-name-guide.md
cmux_agent/: __init__.py
cmux_agent/application/: broker.py  prompting.py  watcher.py
cmux_agent/cli/: __init__.py  __main__.py  commands.py
cmux_agent/domain/: events.py  models.py
cmux_agent/infrastructure/: cmux.py  event_log.py  filesystem.py  storage.py
docs/: 00-overview.md  01-models-storage.md  02-cmux-adapter.md  03-cli.md  04-watcher.md  05-broker.md  06-prompting.md  07-a2a.md
tests/: test_broker.py  test_cli.py  test_config.py  test_event_log.py  test_filesystem.py  test_models.py  test_prompting.py  test_storage.py  test_watcher.py
