[project]
name = "cmux-agent"
version = "0.1.0"
description = "cmux 기반 멀티 에이전트 메시지 브로커 플러그인"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0.0",
]

[project.scripts]
cmux-agent = "cmux_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cmux_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
